# DevWeb2-Projeto1-CinePy

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
app/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20211003_2247.py  0003_cinema.py  0004_movietime.py  0005_session.py  0006_order.py  0007_cart.py
core/views/: __init__.py  cart.py  cinema.py  director.py  genre.py  genreApiView.py  genreClass.py  genreGeneric.py  movie.py  movieTime.py  order.py  session.py
